# miniservice

./: README.md  docker-compose.yml  pyproject.toml
core/modules/: cacheservice.py
minicore/: pyproject.toml
minicore/core/modules/: cacheservice.py
minilib/: test.py
miniservice/: Dockerfile  asgi.py  entrypoint.sh
miniservice/app/: main.py
miniservice/app/routers/: demo.py
miniservice/tests/: test_demo.py
pyapi/: requirements.txt  test.py
pyapi/api/: client.py
service/: .gitignore  Dockerfile  README.md  asgi.py  requirements.txt
service/app/: main.py
service/app/routers/: demo.py  dummy.py
service/models/: person.py
